fixing misaligned error messages on onepage checkout view

--- a/skin/frontend/enterprise/bootstrap/css/style.css
+++ b/skin/frontend/enterprise/bootstrap/css/style.css
@@ -882,7 +882,7 @@ body.catalog-category-view .thumbnails > li {position: relative;}
 
 .cc_types {
     text-align: center !important;
-    width: 620px !important;
+    width: 380px !important;
 }
 
 .btn-checkout-group {
